--- a/FY19/Views/Shared/PageTemplates/KMJ_GenericPageView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_GenericPageView.cshtml
@@ -1,12 +1,33 @@
 ﻿@using Kentico.PageBuilder.Web.Mvc
 @using Kentico.OnlineMarketing.Web.Mvc
 @using Kentico.Web.Mvc
+@using FY19.Models.PageTemplates
+@model ComponentViewModel<PageTemplateProperties>
+
+@{
+    string title = string.Empty;
+    string hiddenClass = string.Empty;
+
+    if (Model.Properties.PageTitle != null)
+    {
+        title = Model.Properties.PageTitle;
+
+        if(title == "IT管理サービス IT-Guardians（ITガーディアンズ） | コニカミノルタ") 
+        {
+            hiddenClass = "hidden-lg";
+        }
+    }
+    else
+    {
+        title = "No title";
+    }
+}
 
 <!DOCTYPE html>
 <html lang="ja">
 <head id="head">
     <title>
-        IT管理サービス IT-Guardians（ITガーディアンズ） | コニカミノルタ
+        @title
     </title>
     <meta name="description" content="IT-GuardiansはコニカミノルタのITの設計・導入・保守・運用ノウハウをパッケージ化し、すべての企業の皆様にご利用いただけるようご提供いたします。" />
     <meta charset="UTF-8" />
@@ -465,7 +486,7 @@
                 <div id="contentsInner">
                     <div class="main">
 
-                        <nav class="localnavigation">
+                        <nav class="localnavigation @hiddenClass">
                             <p class="localnavigation__btn">MENU</p>
                             <ul>
                                 <li><a href="/business/service/it-guardians/index.html">TOP</a></li>
@@ -477,7 +498,7 @@
                             </ul>
                         </nav>
 
-                        <div class="breadcrumb">
+                        <div class="breadcrumb @hiddenClass">
                             <ul>
                                 <li><a href="/business/service/it-guardians/index.html">TOP</a></li>
                                 <li>
@@ -487,13 +508,9 @@
                             </ul>
                         </div>
 
-                        <div class="content-wrapper">
-                            <section class="content-inner">
-                                @Html.Kentico().EditableArea("ContentZone",
-                                                            defaultSectionIdentifier: null,
-                                                            allowedWidgets: new[] { "FY19.FreeHTML" })
-                            </section>
-                        </div>
+                        @Html.Kentico().EditableArea("ContentZone",
+                                                    defaultSectionIdentifier: null,
+                                                    allowedWidgets: new[] { "FY19.FreeHTML" })
 
                         <div class="footer-btn">
                             <div class="footer-btn__wrapper">
