--- a/FY19/Views/Shared/PageTemplates/Sitemaps/KMJ_ITGSitemap.cshtml
+++ b/FY19/Views/Shared/PageTemplates/Sitemaps/KMJ_ITGSitemap.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="view" content="width=device-width" />
-    <title></title>
+    <title>itg-guardians sitemap</title>
 </head>
 <body>
     <h1>ITG Sitemap</h1>
