--- a/FY19/Views/Shared/PageTemplates/KMJ_DocumentSolutionMasterView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_DocumentSolutionMasterView.cshtml
@@ -1,12 +1,33 @@
 ﻿@using Kentico.PageBuilder.Web.Mvc
 @using Kentico.OnlineMarketing.Web.Mvc
 @using Kentico.Web.Mvc
+@using FY19.Models.PageTemplates
+@model ComponentViewModel<PageTemplateProperties>
+
+@{
+    string title = string.Empty;
+    string hiddenClass = string.Empty;
+
+    if (Model.Properties.PageTitle != null)
+    {
+        title = Model.Properties.PageTitle;
+
+        if (title == "IT管理サービス IT-Guardians（ITガーディアンズ） | コニカミノルタ")
+        {
+            hiddenClass = "hidden-lg";
+        }
+    }
+    else
+    {
+        title = "No title";
+    }
+}
 
 <!DOCTYPE html>
 <html lang="ja">
 <head id="head">
     <title>
-        ドキュメントソリューション | コニカミノルタ
+        @title
     </title>
     <meta name="description" content="自社実践を通して得られたノウハウを生かして、企業内にあふれる膨大な書類・文書の管理業務をスマートに行う支援をいたします。" />
     <meta charset="UTF-8" />
@@ -314,8 +335,8 @@
                                     <p>印刷工程の自動化でオペレーションを効率化させるデジタル印刷システムのフラッグシップモデル</p>
                                 </li>
                                 <!--<li><p><a href="/business/products/graphic/ondemand_print/color/accurio_press_c2070_c2070p_c2060/index.html"><img src="https://www.konicaminolta.jp/business/common/img/megamenu/img_072.jpg" width="155" height="110" alt=""><span>AccurioPress C2070 / C2070P / C2060</span></a></p>
-                        <p>進化し続けるマルチロールプロダクション印刷システム「AccurioPress C2070 / C2070P / C2060」</p></li><li><p><a href="/business/products/copiers/bw/bizhub_558_458_368_308/index.html"><img src="https://www.konicaminolta.jp/business/common/img/megamenu/img_065.jpg" width="155" height="110" alt=""><span>bizhub 558 / 458 / 368 / 308</span></a></p>
-                        <p>快適な環境を構築し、業務効率化をサポートする「bizhub 558 / 458 / 368 / 308」</p></li>-->
+                                <p>進化し続けるマルチロールプロダクション印刷システム「AccurioPress C2070 / C2070P / C2060」</p></li><li><p><a href="/business/products/copiers/bw/bizhub_558_458_368_308/index.html"><img src="https://www.konicaminolta.jp/business/common/img/megamenu/img_065.jpg" width="155" height="110" alt=""><span>bizhub 558 / 458 / 368 / 308</span></a></p>
+                                <p>快適な環境を構築し、業務効率化をサポートする「bizhub 558 / 458 / 368 / 308」</p></li>-->
                             </ul>
                             <!-- / .colR -->
                         </div>
@@ -498,65 +519,65 @@
                         allowedWidgets: new[] { "FY19.StaticText" })
 
 
-        <div id="contentsArea">
-            <div id="contentsInner">
-                <div class="main">
-                    @*<cms:CMSWebPartZone ZoneID="HeaderZone" runat="server" />*@
-                    @Html.Kentico().EditableArea("HeaderZone",
-                                                defaultSectionIdentifier: null,
-                                                allowedWidgets: new[] { "FY19.StaticText" })
+            <div id="contentsArea">
+                <div id="contentsInner">
+                    <div class="main">
+                        @*<cms:CMSWebPartZone ZoneID="HeaderZone" runat="server" />*@
+                        @Html.Kentico().EditableArea("HeaderZone",
+                                                    defaultSectionIdentifier: null,
+                                                    allowedWidgets: new[] { "FY19.StaticText" })
 
-                    @*<cms:CMSWebPartZone ZoneID="BreadcrumbsZone" runat="server" />*@
-                    @Html.Kentico().EditableArea("BreadcrumbsZone",
-                                                defaultSectionIdentifier: null,
-                                                allowedWidgets: new[] { "FY19.StaticText" })
+                        @*<cms:CMSWebPartZone ZoneID="BreadcrumbsZone" runat="server" />*@
+                        @Html.Kentico().EditableArea("BreadcrumbsZone",
+                                                    defaultSectionIdentifier: null,
+                                                    allowedWidgets: new[] { "FY19.StaticText" })
 
-                    <div class="content-wrapper">
-                        <section class="content-inner">
-                            @*<cms:CMSWebPartZone ZoneID="ContentZone" runat="server" />*@
-                            @Html.Kentico().EditableArea("ContentZone",
-                                                        defaultSectionIdentifier: null,
-                                                        allowedWidgets: new[] { "FY19.Image",
-                                                                                "FY19.H2Header",
-                                                                                "FY19.H3Header",
-                                                                                "FY19.H4Header",
-                                                                                "FY19.BodyText",
-                                                                                "FY19.StaticText",
-                                                                                "FY19.AnnotationList",
-                                                                                "FY19.LinkList",
-                                                                                "FY19.BreadCrumbs",
-                                                                                "FY19.List",
-                                                                                "FY19.AnchorList",
-                                                                                "FY19.LinkButton",
-                                                                                "FY19.HeadHTML",
-                                                                                "FY19.FreeHTML",
-                                                                                "FY19.Table",
-                                                                                "FY19.Placeholder"})
-                        </section>
+                        <div class="content-wrapper">
+                            <section class="content-inner content-inner-top">
+                                @*<cms:CMSWebPartZone ZoneID="ContentZone" runat="server" />*@
+                                @Html.Kentico().EditableArea("ContentZone",
+                                                            defaultSectionIdentifier: null,
+                                                            allowedWidgets: new[] { "FY19.Image",
+                                                                                    "FY19.H2Header",
+                                                                                    "FY19.H3Header",
+                                                                                    "FY19.H4Header",
+                                                                                    "FY19.BodyText",
+                                                                                    "FY19.StaticText",
+                                                                                    "FY19.AnnotationList",
+                                                                                    "FY19.LinkList",
+                                                                                    "FY19.BreadCrumbs",
+                                                                                    "FY19.List",
+                                                                                    "FY19.AnchorList",
+                                                                                    "FY19.LinkButton",
+                                                                                    "FY19.HeadHTML",
+                                                                                    "FY19.FreeHTML",
+                                                                                    "FY19.Table",
+                                                                                    "FY19.Placeholder"})
+                            </section>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            @*<cms:CMSWebPartZone ZoneID="FooterZone" runat="server" />*@
-            @Html.Kentico().EditableArea("FooterZone",
-                                        defaultSectionIdentifier: null,
-                                        allowedWidgets: new[] { "FY19.Image",
-                                                                "FY19.H2Header",
-                                                                "FY19.H3Header",
-                                                                "FY19.H4Header",
-                                                                "FY19.BodyText",
-                                                                "FY19.StaticText",
-                                                                "FY19.AnnotationList",
-                                                                "FY19.LinkList",
-                                                                "FY19.BreadCrumbs",
-                                                                "FY19.List",
-                                                                "FY19.AnchorList",
-                                                                "FY19.LinkButton",
-                                                                "FY19.HeadHTML",
-                                                                "FY19.FreeHTML",
-                                                                "FY19.Table",
-                                                                "FY19.Placeholder"})
-        </div>
+                @*<cms:CMSWebPartZone ZoneID="FooterZone" runat="server" />*@
+                @Html.Kentico().EditableArea("FooterZone",
+                                            defaultSectionIdentifier: null,
+                                            allowedWidgets: new[] { "FY19.Image",
+                                                                    "FY19.H2Header",
+                                                                    "FY19.H3Header",
+                                                                    "FY19.H4Header",
+                                                                    "FY19.BodyText",
+                                                                    "FY19.StaticText",
+                                                                    "FY19.AnnotationList",
+                                                                    "FY19.LinkList",
+                                                                    "FY19.BreadCrumbs",
+                                                                    "FY19.List",
+                                                                    "FY19.AnchorList",
+                                                                    "FY19.LinkButton",
+                                                                    "FY19.HeadHTML",
+                                                                    "FY19.FreeHTML",
+                                                                    "FY19.Table",
+                                                                    "FY19.Placeholder"})
+            </div>
 
             @*<cms:CMSWebPartZone ZoneID="FooterScriptZone" runat="server" />*@
             @Html.Kentico().EditableArea("FooterScriptZone",
@@ -565,14 +586,14 @@
         </div>
 
         <script type="text/javascript">
-        //<![CDATA[
+            //<![CDATA[
             WebForm_InitCallback();
             theForm.oldSubmit = theForm.submit;
             theForm.submit = WebForm_SaveScrollPositionSubmit;
 
             theForm.oldOnSubmit = theForm.onsubmit;
             theForm.onsubmit = WebForm_SaveScrollPositionOnSubmit;
-        //]]>
+                        //]]>
         </script>
     </form>
 
