--- a/FY19/Views/Shared/PageTemplates/KMJ_MasterPageView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_MasterPageView.cshtml
@@ -1,12 +1,33 @@
 ﻿@using Kentico.PageBuilder.Web.Mvc
 @using Kentico.OnlineMarketing.Web.Mvc
 @using Kentico.Web.Mvc
+@using FY19.Models.PageTemplates
+@model ComponentViewModel<PageTemplateProperties>
+
+@{
+    string title = string.Empty;
+    string hiddenClass = string.Empty;
+
+    if (Model.Properties.PageTitle != null)
+    {
+        title = Model.Properties.PageTitle;
+
+        if (title == "IT管理サービス IT-Guardians（ITガーディアンズ） | コニカミノルタ")
+        {
+            hiddenClass = "hidden-lg";
+        }
+    }
+    else
+    {
+        title = "No title";
+    }
+}
 
 <!DOCTYPE html>
 <html lang="ja">
 <head id="head">
     <title>
-        IT管理サービス IT-Guardians（ITガーディアンズ） | コニカミノルタ
+        @title
     </title>
     <meta name="description" content="IT-GuardiansはコニカミノルタのITの設計・導入・保守・運用ノウハウをパッケージ化し、すべての企業の皆様にご利用いただけるようご提供いたします。" />
     <meta charset="UTF-8" />
