Fix class names not appearing for all widgets

--- a/FY19/Views/Shared/Widgets/AnchorLinkList.cshtml
+++ b/FY19/Views/Shared/Widgets/AnchorLinkList.cshtml
@@ -78,7 +78,7 @@
 }
 
 
-<ul class="listInternalLink @if (id != null) { @className; }" id="@id">
+<ul class="listInternalLink @if (className != null) { @className; }" id="@id">
 
     @if (text1 != null)
     {
