--- a/FY19/Views/Shared/Widgets/LinkListView.cshtml
+++ b/FY19/Views/Shared/Widgets/LinkListView.cshtml
@@ -57,7 +57,7 @@
     }
 }
 
-<div class="listLink @if (Model.Properties.Id != null) { @Model.Properties.Class; }" id="@Model.Properties.Id">
+<div class="listLink @if (Model.Properties.Class != null) { @Model.Properties.Class; }" id="@Model.Properties.Id">
     <ul class="listLinkList">
         @if (Model.Properties.Text1 != null || Model.Properties.Description1 != null)
         {
