--- a/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
+++ b/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
@@ -72,7 +72,7 @@
 
 
 <div class="catalog-row__col">
-    <a @url class="catalog-row__col__img @if(Model.Properties.NewIcon == "display"){ @newIcon } " @tBlank><img src="@imgSrc" alt="" class="center-block img-responsive"></a>
+    <a @url class="catalog-row__col__img @if(Model.Properties.NewIcon == "display"){ @newIcon } " @tBlank><img src="@imgSrc" alt="" class="center-block img-responsive" style="max-height: 170px;"></a>
     <p class="catalog-row__col__ttl">@Model.Properties.Title</p>
     <p class="catalog-row__col__txt">@Html.Raw(HttpUtility.HtmlDecode(contentText.Replace(Environment.NewLine, "<br/>")))</p>
     <p class="catalog-row__col__btn"><a @url @tBlank>ダウンロードはこちら</a></p>
