Remove https:// default text, Remove unused sections

--- a/FY19/Views/Shared/Widgets/LinkListView.cshtml
+++ b/FY19/Views/Shared/Widgets/LinkListView.cshtml
@@ -6,52 +6,52 @@
     string blank1 = string.Empty, blank2 = string.Empty, blank3 = string.Empty, blank4 = string.Empty, blank5 = string.Empty, blank6 = string.Empty, blank7 = string.Empty, blank8 = string.Empty, blank9 = string.Empty, blank10 = string.Empty;
     string tBlank = "target=_blank";
 
-    if (Model.Properties.Blank1 && Model.Properties.Url1 == null)
+    if (Model.Properties.Blank1)
     {
         blank1 = tBlank;
     }
 
-    if (Model.Properties.Blank2 && Model.Properties.Url2 == null)
+    if (Model.Properties.Blank2)
     {
         blank2 = tBlank;
     }
 
-    if (Model.Properties.Blank3 && Model.Properties.Url3 == null)
+    if (Model.Properties.Blank3)
     {
         blank3 = tBlank;
     }
 
-    if (Model.Properties.Blank4 && Model.Properties.Url4 == null)
+    if (Model.Properties.Blank4)
     {
         blank4 = tBlank;
     }
 
-    if (Model.Properties.Blank5 && Model.Properties.Url5 == null)
+    if (Model.Properties.Blank5)
     {
         blank5 = tBlank;
     }
 
-    if (Model.Properties.Blank6 && Model.Properties.Url6 == null)
+    if (Model.Properties.Blank6)
     {
         blank6 = tBlank;
     }
 
-    if (Model.Properties.Blank7 && Model.Properties.Url7 == null)
+    if (Model.Properties.Blank7)
     {
         blank7 = tBlank;
     }
 
-    if (Model.Properties.Blank8 && Model.Properties.Url8 == null)
+    if (Model.Properties.Blank8)
     {
         blank8 = tBlank;
     }
 
-    if (Model.Properties.Blank9 && Model.Properties.Url9 == null)
+    if (Model.Properties.Blank9)
     {
         blank9 = tBlank;
     }
 
-    if (Model.Properties.Blank10 && Model.Properties.Url10 == null)
+    if (Model.Properties.Blank10)
     {
         blank10 = tBlank;
     }
