--- a/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
+++ b/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
@@ -10,7 +10,7 @@
     string url = string.Empty;
     if (Model.Properties.Url != null)
     {
-        url = Model.Properties.Url.Contains("https://") ? "href=" + Model.Properties.Url : "href=https://" + Model.Properties.Url;
+        url = Model.Properties.Url;
     }
 
     string newIcon = string.Empty;
@@ -75,6 +75,6 @@
     <a @url class="catalog-row__col__img @if(Model.Properties.NewIcon == "display"){ @newIcon } " @tBlank><img src="@imgSrc" alt="" class="center-block img-responsive" style="max-height: 170px;"></a>
     <p class="catalog-row__col__ttl">@Model.Properties.Title</p>
     <p class="catalog-row__col__txt">@Html.Raw(HttpUtility.HtmlDecode(contentText.Replace(Environment.NewLine, "<br/>")))</p>
-    <p class="catalog-row__col__btn"><a @url @tBlank>ダウンロードはこちら</a></p>
+    <p class="catalog-row__col__btn"><a href="@url" @tBlank>ダウンロードはこちら</a></p>
     <!--/catalog-row__col-->
 </div>
