--- a/FY19/Views/Shared/PageTemplates/KMJ_GenericCategoryTopView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_GenericCategoryTopView.cshtml
@@ -21,6 +21,8 @@
     {
         title = "No title";
     }
+
+    string current = "current";
 }
 
 <!DOCTYPE html>
@@ -205,30 +207,6 @@
                 <!-- / .globalNav -->
             </nav>
 
-            <div id="HeaderZone">
-                <nav class="localnavigation">
-                    <p class="localnavigation__btn">MENU</p>
-                    <ul>
-                        <li class="current"><a href="/business/service/it-guardians/index.html">TOP</a></li>
-                        <li><a href="/business/service/it-guardians/index.html#itg-solution">Problem solving</a></li>
-                        <li> <a href="/business/service/it-guardians/helpdesk/index.html">Help desk</a></li>
-                        <li> <a href="/business/service/it-guardians/service/index.html ">Service list</a></li>
-                        <li><span>ニュース</span></li>
-                        <li> <a href="https://bsoffers.konicaminolta.jp/fm-it-guardians-contact.html" target="_blank">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-            @*BreadCrumbZone*@
-            <div class="breadcrumb">
-                <ul>
-                    <li>
-                        <a href="/business/service/it-guardians/index.html">TOP</a>
-                    </li>
-                    <li>カタログダウンロード</li>
-                </ul>
-            </div>
-
             <div id="megaMenu">
                 <div></div><!-- Home -->
                 <!-- begin Solutions & Service -->
@@ -330,8 +308,8 @@
                                     <p>印刷工程の自動化でオペレーションを効率化させるデジタル印刷システムのフラッグシップモデル</p>
                                 </li>
                                 <!--<li><p><a href="/business/products/graphic/ondemand_print/color/accurio_press_c2070_c2070p_c2060/index.html"><img src="https://www.konicaminolta.jp/business/common/img/megamenu/img_072.jpg" width="155" height="110" alt=""><span>AccurioPress C2070 / C2070P / C2060</span></a></p>
-                                <p>進化し続けるマルチロールプロダクション印刷システム「AccurioPress C2070 / C2070P / C2060」</p></li><li><p><a href="/business/products/copiers/bw/bizhub_558_458_368_308/index.html"><img src="https://www.konicaminolta.jp/business/common/img/megamenu/img_065.jpg" width="155" height="110" alt=""><span>bizhub 558 / 458 / 368 / 308</span></a></p>
-                                <p>快適な環境を構築し、業務効率化をサポートする「bizhub 558 / 458 / 368 / 308」</p></li>-->
+                        <p>進化し続けるマルチロールプロダクション印刷システム「AccurioPress C2070 / C2070P / C2060」</p></li><li><p><a href="/business/products/copiers/bw/bizhub_558_458_368_308/index.html"><img src="https://www.konicaminolta.jp/business/common/img/megamenu/img_065.jpg" width="155" height="110" alt=""><span>bizhub 558 / 458 / 368 / 308</span></a></p>
+                        <p>快適な環境を構築し、業務効率化をサポートする「bizhub 558 / 458 / 368 / 308」</p></li>-->
                             </ul>
                             <!-- / .colR -->
                         </div>
@@ -511,6 +489,75 @@
             <div id="contentsArea">
                 <div id="contentsInner">
                     <div class="main">
+
+                        <nav class="localnavigation @hiddenClass">
+                            <p class="localnavigation__btn">MENU</p>
+                            <ul>
+                                <li><a href="/business/service/it-guardians/index.html">TOP</a></li>
+                                <li class="@if (!title.Contains("ヘルプデスク") && !title.Contains("サービス一覧")) { @current }"><a href="/business/service/it-guardians/index.html#itg-solution">課題解決</a></li>
+                                <li class="@if (title.Contains("ヘルプデスク")){ @current }"><a href="/business/service/it-guardians/helpdesk/index.html">ヘルプデスク</a></li>
+                                <li class="@if (title.Contains("サービス一覧")){ @current }"><a href="/business/service/it-guardians/service/index.html">サービス一覧</a></li>
+                                <li><span>ニュース</span></li>
+                                <li><a href="https://bs-offers.konicaminolta.jp/it-guardians/contact/form/" target="_blank">お問い合わせ</a></li>
+                            </ul>
+                        </nav>
+
+                        <div class="breadcrumb @hiddenClass">
+                            <ul>
+                                <li><a href="/business/service/it-guardians/index.html">TOP</a></li>
+                                <li>
+                                    @if (title == "ヘルプデスク | IT管理サービス IT-Guardians | コニカミノルタ")
+                                    {
+                                        @Html.Raw("ヘルプデスク")
+                                    }
+                                    else if (title == "サービス一覧 | IT管理サービス IT-Guardians | コニカミノルタ" && title == "IT-Guardians アンチウイルスサービス | コニカミノルタ" && title == "IT-Guardians リモートビューサービス | コニカミノルタ" && title == "IT-Guardians UTMサービス | コニカミノルタ")
+                                    {
+                                        @Html.Raw("サービス一覧")
+                                    }
+                                    else
+                                    {
+                                        <a href="/business/service/it-guardians/index.html#itg-solution" class="CMSBreadCrumbsLink">課題解決</a>
+                                    }
+                                </li>
+                                @if (title == "情報システムの運用負荷軽減 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>情報システムの運用負荷軽減</li>
+                                }
+                                else if (title == "セキュリティ対策 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>セキュリティ対策</li>
+                                }
+                                else if (title == "情報伝達による生産性向上 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>情報伝達による生産性向上</li>
+                                }
+                                else if (title == "プリンティング環境最適化 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>プリンティング環境最適化</li>
+                                }
+                                else if (title == "ITコスト低減／変動費化 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>ITコスト低減／変動費化</li>
+                                }
+                                else if (title == "IT-Guardians リモートビューサービス | コニカミノルタ")
+                                {
+                                    <li>リモートビューサービス</li>
+                                }
+                                else if (title == "IT-Guardians アンチウイルスサービス | コニカミノルタ")
+                                {
+                                    <li>アンチウイルスサービス</li>
+                                }
+                                else if (title == "IT-Guardians UTMサービス | コニカミノルタ")
+                                {
+                                    <li>UTMサービス</li>
+                                }
+                                else
+                                {
+                                    <li></li>
+                                }
+                            </ul>
+                        </div>
+
                         @Html.Kentico().EditableArea("HeadHTMLZone", defaultSectionIdentifier: null, allowedWidgets: new[] { "FY19.HeadHTML" })
                         @Html.Kentico().EditableArea("HeaderZone", defaultSectionIdentifier: null, allowedWidgets: new[] { "FY19.H2Header", "FY19.H3Header", "FY19.H4Header" })
 
