--- a/FY19/Views/Shared/PageTemplates/KMJ_GenericWidgetPageView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_GenericWidgetPageView.cshtml
@@ -21,6 +21,8 @@
     {
         title = "No title";
     }
+
+    string current = "current";
 }
 
 <!DOCTYPE html>
@@ -484,35 +486,71 @@
             <div id="contentsArea">
                 <div id="contentsInner">
                     <div class="main">
-                        <nav class="localnavigation">
+                        <nav class="localnavigation @hiddenClass">
                             <p class="localnavigation__btn">MENU</p>
                             <ul>
                                 <li><a href="/business/service/it-guardians/index.html">TOP</a></li>
-                                <!--
-                                -->
-                                <li><a href="/business/service/it-guardians/index.html#itg-solution">課題解決</a></li>
-                                <!--
-                                -->
-                                <li><a href="/business/service/it-guardians/helpdesk/index.html">ヘルプデスク</a></li>
-                                <!--
-                                -->
-                                <li class="current"><a href="/business/service/it-guardians/service/index.html">サービス一覧</a></li>
-                                <!--
-                                -->
+                                <li class="@if (!title.Contains("ヘルプデスク") && !title.Contains("サービス一覧")) { @current }"><a href="/business/service/it-guardians/index.html#itg-solution">課題解決</a></li>
+                                <li class="@if (title.Contains("ヘルプデスク")){ @current }"><a href="/business/service/it-guardians/helpdesk/index.html">ヘルプデスク</a></li>
+                                <li class="@if (title.Contains("サービス一覧")){ @current }"><a href="/business/service/it-guardians/service/index.html">サービス一覧</a></li>
                                 <li><span>ニュース</span></li>
-                                <!--
-                                -->
-                                <li><a href="https://bsoffers.konicaminolta.jp/fm-it-guardians-contact.html" target="_blank">お問い合わせ</a></li>
+                                <li><a href="https://bs-offers.konicaminolta.jp/it-guardians/contact/form/" target="_blank">お問い合わせ</a></li>
                             </ul>
                         </nav>
 
-                        <div class="breadcrumb">
+                        <div class="breadcrumb @hiddenClass">
                             <ul>
                                 <li><a href="/business/service/it-guardians/index.html">TOP</a></li>
                                 <li>
-                                    <a href="/business/service/it-guardians/service/index.html" class="CMSBreadCrumbsLink">サービス一覧</a>
+                                    @if (title == "ヘルプデスク | IT管理サービス IT-Guardians | コニカミノルタ")
+                                    {
+                                        @Html.Raw("ヘルプデスク")
+                                    }
+                                    else if (title == "サービス一覧 | IT管理サービス IT-Guardians | コニカミノルタ" && title == "IT-Guardians アンチウイルスサービス | コニカミノルタ" && title == "IT-Guardians リモートビューサービス | コニカミノルタ" && title == "IT-Guardians UTMサービス | コニカミノルタ")
+                                    {
+                                        @Html.Raw("サービス一覧")
+                                    }
+                                    else
+                                    {
+                                        <a href="/business/service/it-guardians/index.html#itg-solution" class="CMSBreadCrumbsLink">課題解決</a>
+                                    }
                                 </li>
-                                <li>アンチウイルスサービス</li>
+                                @if (title == "情報システムの運用負荷軽減 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>情報システムの運用負荷軽減</li>
+                                }
+                                else if (title == "セキュリティ対策 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>セキュリティ対策</li>
+                                }
+                                else if (title == "情報伝達による生産性向上 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>情報伝達による生産性向上</li>
+                                }
+                                else if (title == "プリンティング環境最適化 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>プリンティング環境最適化</li>
+                                }
+                                else if (title == "ITコスト低減／変動費化 | IT管理サービス IT-Guardians | コニカミノルタ")
+                                {
+                                    <li>ITコスト低減／変動費化</li>
+                                }
+                                else if (title == "IT-Guardians リモートビューサービス | コニカミノルタ")
+                                {
+                                    <li>リモートビューサービス</li>
+                                }
+                                else if (title == "IT-Guardians アンチウイルスサービス | コニカミノルタ")
+                                {
+                                    <li>アンチウイルスサービス</li>
+                                }
+                                else if (title == "IT-Guardians UTMサービス | コニカミノルタ")
+                                {
+                                    <li>UTMサービス</li>
+                                }
+                                else
+                                {
+                                    <li></li>
+                                }
                             </ul>
                         </div>
 
